added twitter search api

--- a/Bank Customer Review Analysis.ipynb
+++ b/Bank Customer Review Analysis.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "20"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,41 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RT @Dadsaysjokes: A priest, an imam, and a rabbit walk into a blood bank.\n",
-      "\n",
-      "The rabbit says,\"I think I might be a type O.\"\n",
-      "RT @mmpadellan: BREAKING: Deutsche Bank COMPLIED with a subpoena from the Manhattan DA for trump's financial records.\n",
-      "\n",
-      "TIK. TOK.\n",
-      "https://t.…\n",
-      "RT @lyndsay_barna: .@MTFootball18 @cade_clancy says \"They've been working the safety plan the best we can and I think we deserve the best s…\n",
-      "@thejohngoodwin I cant wait for \"Facebook Bank\", that way they just get ALL of our personal info\n",
-      "RT @washingtonpost: Justice Department accuses Ukrainian oligarch of stealing billions from bank he once owned and laundering it in the U.S…\n",
-      "RT @FreddieBailey96: For millions of young people, there never was a bank of mum and dad.\n",
-      "RT @outroride: PLEASE DONATE TO LEBANON !! These are some trusted places to donate to:\n",
-      "\n",
-      "Lebanese red cross \n",
-      "🔗https://t.co/W1gj30Z2bq\n",
-      "\n",
-      "Leban…\n",
-      "RT @mmpadellan: BREAKING: Deutsche Bank COMPLIED with a subpoena from the Manhattan DA for trump's financial records.\n",
-      "\n",
-      "TIK. TOK.\n",
-      "https://t.…\n",
-      "My mother and foster mother see me relaxed and not stressing and automatically think I have 500k sitting in my bank acct\n",
-      "@SethAbramson He’s sinking and flailing to tread water. Btw, we haven’t heard from Crazy Uncle Rudy in a while. Wha… https://t.co/XckijXrq2q\n"
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "@UnitySacco Hello k-unity am one of your customers from suswa branch and I want to transfer money from KCB bank to… https://t.co/fczgLJnE5n\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @herine_lando: KCB bank : https://t.co/VEN9TT1tmK\n",
+      "RT @KCBGroup: When you bank with us it’s always a win for ya’ll. Tap and Go with your KCB cards or use your KCB iBank and earn Simba Points…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "@Safaricom_Care hey i sent some cash via kcb paybill no 522522 unfortunately the user is an unregistered kcb bank u… https://t.co/hLDr3dt2ji\n",
+      "KCB bank : https://t.co/tr3R1x2WoV https://t.co/VEN9TT1tmK\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @KCBGroup: When you bank with us it’s always a win for ya’ll. Tap and Go with your KCB cards or use your KCB iBank and earn Simba Points…\n",
+      "RT @KCBGroup: When you bank with us it’s always a win for ya’ll. Tap and Go with your KCB cards or use your KCB iBank and earn Simba Points…\n",
+      "RT @motowntz: Watanzania 56,000 wameajiriwa na kampuni 300 zenye chimbuko lao Kenya ikiwemo Kcb Bank , Equity , Kenya Airways, Serena Hotel…\n",
+      "RT @KCBGroup: When you bank with us it’s always a win for ya’ll. Tap and Go with your KCB cards or use your KCB iBank and earn Simba Points…\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10,20):\n",
+    "for i in range(20):\n",
     "    print(ke_banking_tweets[i])"
    ]
   },
