added word frequency

--- a/Bank Customer Review Analysis.ipynb
+++ b/Bank Customer Review Analysis.ipynb
@@ -578,16 +578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[history, reminds, m, …, RT, :, Thank, visiting, Mama, Lucy, Equity, Bank, Team, ., \n",
-      "\n",
-      ", greatly, appreciate, support, PPEs, hospital, …, finance, master, ,, CEO, equity, Bank, ,, championed, wings, Fly, ,, James, man, !, !, Equity, Bank, ,, Navigating, Tough, Tech, Terrain, ,, Innovating, Customers,  , RT, :, equity, bank, retain, pro, -, people, focus, ?, stand, ordinary, people, built, ?, billion, dolla, …, Hi, Jimmyn, ,, contact, Equity, Bank, 0202262000, (, chargeable, ), assistance, ., ^RI, RT, _]\n"
+      "['history', 'reminds', 'm', '…', 'rt', ':', 'thank', 'visiting', 'mama', 'lucy', 'equity', 'bank', 'team', '.', '\\n\\n', 'greatly', 'appreciate', 'support', 'ppes', 'hospital', '…', 'finance', 'master', ',', 'ceo', 'equity', 'bank', ',', 'championed', 'wings', 'fly', ',', 'james', 'man', '!', '!', 'equity', 'bank', ',', 'navigating', 'tough', 'tech', 'terrain', ',', 'innovating', 'customers', ' ', 'rt', ':', 'equity', 'bank', 'retain', 'pro', '-', 'people', 'focus', '?', 'stand', 'ordinary', 'people', 'built', '?', 'billion', 'dolla', '…', 'hi', 'jimmyn', ',', 'contact', 'equity', 'bank', '0202262000', '(', 'chargeable', ')', 'assistance', '.', '^ri', 'rt', '_']\n"
      ]
     }
    ],
@@ -626,44 +624,210 @@
     "        if (username_pattern.match(i.text) or url_pattern.match(i.text)):  \n",
     "            pass\n",
     "        else:\n",
-    "            cleaned_results.append(i)\n",
+    "            cleaned_results.append(str.lower(i.text))\n",
     "print(cleaned_results[100:180])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 363,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "courtesy courtesy\n",
-      "… …\n",
-      "equity equity\n",
-      "bank bank\n",
-      "retain retain\n",
-      "pro pro\n",
-      "- -\n",
-      "people people\n",
-      "focus focus\n",
-      "? ?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# lemmatize results\n",
-    "for word in cleaned_results[210:220]:\n",
-    "    print(word.text,word.lemma_)\n"
+    "# # lemmatize results\n",
+    "# for word in cleaned_results[210:220]:\n",
+    "#     print(word,word.lemma_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bank</td>\n",
+       "      <td>278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>equity</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rt</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mwangi</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>james</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ceo</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>dr</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>banks</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>kenya</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>best</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>thepeoplesbanker</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>customers</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>financial</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>mpesa</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>like</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>account</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>people</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>foundation</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>pay</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>m</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                word  freq\n",
+       "0               bank   278\n",
+       "1             equity   255\n",
+       "2                 rt    67\n",
+       "3             mwangi    43\n",
+       "4              james    42\n",
+       "5                ceo    31\n",
+       "6                 dr    31\n",
+       "7              banks    18\n",
+       "8              kenya    16\n",
+       "9               best    16\n",
+       "10  thepeoplesbanker    16\n",
+       "11         customers    13\n",
+       "12         financial    13\n",
+       "13             mpesa    12\n",
+       "14              like    10\n",
+       "15           account    10\n",
+       "16            people     9\n",
+       "17        foundation     8\n",
+       "18               pay     8\n",
+       "19                 m     8"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create word frequency\n",
+    "from string import punctuation\n",
+    "# add some words to punctuation\n",
+    "punctuation = punctuation + '\\n'+'…'+'\\n\\n'+'RT'+' '+'..'+'...'\n",
+    "word_frequencies = {}\n",
+    "for word in cleaned_results:\n",
+    "    if word not in punctuation:\n",
+    "        if word not in word_frequencies.keys():\n",
+    "            word_frequencies[word] = 1\n",
+    "        else:\n",
+    "            word_frequencies[word]+=1\n",
+    "\n",
+    "#  …\t          \n",
+    "word_freq_df = pd.DataFrame(word_frequencies.items(),columns = ['word','freq'])\n",
+    "word_freq_df = word_freq_df.sort_values(by='freq',ascending=False).reset_index(drop=True)\n",
+    "word_freq_df[0:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Looking at the word frequency, we do not see any major outliers"
+   ]
   },
   {
    "cell_type": "code",
